src/objects/Match_Prediction__c.object
<CustomObject>
    <fields>
        <fullName>Bidder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidder</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Match Predictions</relationshipLabel>
        <relationshipName>Match_Predictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManOfMatch_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ManOfMatch Bid</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Match Predictions</relationshipLabel>
        <relationshipName>Match_Predictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <label>Match</label>
        <referenceTo>Match__c</referenceTo>
        <relationshipLabel>Match Predictions</relationshipLabel>
        <relationshipName>Match_Predictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Winning_Team_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Team Bid</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match Predictions</relationshipLabel>
        <relationshipName>Match_Predictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Match Prediction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Match Prediction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Predictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>